<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activities.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:src="@drawable/img_logo_green_text"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.kmitl.mythesis.utils.HPTextSemiBold
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/label_login"
        android:textSize="@dimen/label_login_regis"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fil_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/hint_email_id_text"
        android:textColorHint="@color/HintSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_login">

        <com.kmitl.mythesis.utils.HPEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fill_auth_height"
            android:padding="@dimen/et_padding"
            android:paddingTop="@dimen/et_paddingTop"
            android:inputType="text"
            android:textSize="@dimen/et_auth"
            android:textColor="@color/PrimaryText"
            tools:text="abc@gmail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fil_num"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/hint_password_id_text"
        android:textColorHint="@color/HintSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fil_email">

        <com.kmitl.mythesis.utils.HPEditText
            android:id="@+id/et_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fill_auth_height"
            android:padding="@dimen/et_padding"
            android:paddingTop="@dimen/et_paddingTop"
            android:inputType="textPassword"
            android:textSize="@dimen/et_auth"
            android:textColor="@color/PrimaryText"
            tools:text="123456"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.kmitl.mythesis.utils.HPButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:padding="@dimen/btn_padding"
        android:background="@drawable/button_bg"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/btnLogin_text"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fil_num"/>

    <com.kmitl.mythesis.utils.HPTextRegular
        android:id="@+id/hyperlink_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:text="@string/hyperlinkForgetPassword_text"
        android:textSize="@dimen/link_textSize"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/clickAble_text_view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <com.kmitl.mythesis.utils.HPTextRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dont_have_acc"
            android:textSize="@dimen/link_textSize"/>

        <com.kmitl.mythesis.utils.HPTextBold
            android:id="@+id/hyperlink_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/clickAble_text_view_padding"
            android:text="@string/hyperlinkRegister_text"
            android:textSize="@dimen/link_textSize"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackground"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>