<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:src="@drawable/img_logo_green_text"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.kmitl.mythesis.utils.HPTextSemiBold
        android:id="@+id/title_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_forgotpassword"
        android:textSize="@dimen/title_forgot"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"/>

    <com.kmitl.mythesis.utils.HPTextRegular
        android:id="@+id/label_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/label_forgotpassword"
        android:textSize="@dimen/label_forgot"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_forgotpassword"/>

    <com.kmitl.mythesis.utils.HPTextRegular
        android:id="@+id/label_forgotpassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/label_forgotpassword2"
        android:textSize="@dimen/label_forgot"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_forgotpassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fil_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/hint_email_id_text"
        android:textColorHint="@color/HintSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_forgotpassword2">

        <com.kmitl.mythesis.utils.HPEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fill_auth_height"
            android:padding="@dimen/et_padding"
            android:paddingTop="@dimen/et_paddingTop"
            android:inputType="text"
            android:textSize="@dimen/et_auth"
            android:textColor="@color/PrimaryText"
            tools:text="abc@gmail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.kmitl.mythesis.utils.HPButton
        android:id="@+id/btn_summit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="@dimen/btn_padding"
        android:background="@drawable/button_bg"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/btnSummit_text"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fil_email"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <com.kmitl.mythesis.utils.HPTextRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dont_have_acc"
            android:textSize="@dimen/link_textSize"/>

        <com.kmitl.mythesis.utils.HPTextBold
            android:id="@+id/hyperlink_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/clickAble_text_view_padding"
            android:text="@string/hyperlinkRegister_text"
            android:textSize="@dimen/link_textSize"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackground"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>