<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/bar_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/temp_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_margin25"
                android:layout_marginEnd="@dimen/fragment_margin25">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.kmitl.mythesis.utils.HPTextSemiBold
                        android:id="@+id/user_province"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"

                        android:text="@string/tv_user_province"
                        android:textSize="@dimen/title_textSize"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"/>

                    <com.kmitl.mythesis.utils.HPTextRegular
                        android:id="@+id/province_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tv_province_temp"
                        android:textSize="@dimen/content_textSize"
                        android:textColor="@color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <com.kmitl.mythesis.utils.HPTextSemiBold
                        android:id="@+id/tv_temp_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tv_temp_daily"
                        android:textSize="@dimen/temp"
                        android:textColor="@android:color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <!-- Line 1 -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/margin10"/>

            <LinearLayout
                android:id="@+id/box_myplant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_marginTopDown"
                android:layout_marginStart="@dimen/fragment_margin25"
                android:layout_marginEnd="@dimen/fragment_margin25"
                android:layout_marginBottom="@dimen/fragment_marginTopDown"
                android:orientation="horizontal"
                android:rowCount="1"
                android:columnCount="2">

                <LinearLayout
                    android:layout_width="@dimen/ic_size30"
                    android:layout_height="@dimen/ic_size30"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="@dimen/ic_size30"
                        android:layout_height="@dimen/ic_size30"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_home_myplant"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.kmitl.mythesis.utils.HPTextRegular
                    android:id="@+id/tv_myplant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_see_my_plant"
                    android:textSize="@dimen/link_textSize"
                    android:textColor="@android:color/black"

                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <!-- Line 2 -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_marginTopDown"
                android:layout_marginStart="@dimen/fragment_margin25"
                android:layout_marginEnd="@dimen/fragment_margin25"
                android:layout_marginBottom="@dimen/fragment_marginTopDown"
                android:orientation="horizontal"
                android:rowCount="1"
                android:columnCount="2">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/ic_add"
                    android:layout_width="@dimen/ic_size30"
                    android:layout_height="@dimen/ic_size30"
                    android:src="@drawable/ic_add">
                </ImageView>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"

                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:columnCount="2"

                android:alignmentMode="alignMargins"
                android:layout_gravity="center_horizontal"

                android:columnOrderPreserved="false">

                <androidx.cardview.widget.CardView
                    android:id="@+id/box_user_plant"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginBottom="@dimen/margin20"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    android:layout_gravity="center_horizontal|start">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_user_plant"
                            android:layout_width="@dimen/viewcard_img_size"
                            android:layout_height="@dimen/viewcard_img_size"
                            android:layout_marginTop="@dimen/viewcard_img_marginTopDown"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"/>

                        <com.kmitl.mythesis.utils.HPTextRegular
                            android:id="@+id/label_user_plant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:text="@string/user_plant_name"
                            android:textColor="@android:color/black"

                            android:textSize="@dimen/viewcard_textSize" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>


        </LinearLayout>



    </ScrollView>



</FrameLayout>